--- a/package.json
+++ b/package.json
@@ -6,12 +6,30 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tsconfig/node22": "^22.0.0",
+        "@types/node": "^22.10.2",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "@vue/eslint-config-prettier": "^10.1.0",
+        "@vue/eslint-config-typescript": "^14.1.3",
+        "@vue/tsconfig": "^0.7.0",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "eslint": "^9.14.0",
+        "eslint-plugin-vue": "^9.30.0",
         "laravel-vite-plugin": "^1.0",
+        "npm-run-all2": "^7.0.2",
         "postcss": "^8.4.47",
+        "prettier": "^3.3.3",
         "tailwindcss": "^3.4.13",
-        "vite": "^6.0"
+        "typescript": "~5.6.3",
+        "vite": "^6.0",
+        "vite-plugin-vue-devtools": "^7.6.8",
+        "vue-tsc": "^2.1.10"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^2.0.0",
+        "vue": "^3.5.13",
+        "vue-loader": "^17.3.1"
     }
 }
