--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0",
-        "vue": "^3.5.13",
-        "vue-loader": "^17.3.1"
+        "vue": "^3.5.13"
     }
 }
