--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@tsconfig/node22": "^22.0.0",
+        "@types/lodash": "^4.17.14",
         "@types/node": "^22.10.2",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vue/eslint-config-prettier": "^10.1.0",
@@ -29,6 +30,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0",
+        "lodash": "^4.17.21",
         "vue": "^3.5.13"
     }
 }
